--- a/personal-projects.html
+++ b/personal-projects.html
@@ -86,22 +86,22 @@
     <div class="grid-row">
       <div class="info-box">
         <h3>Work Experience</h3>
-        <p>Dialysis, peds, and real estate — all in rotation.</p>
+        <p>I’ve done dialysis. I’ve flipped your grandma over and changed her briefs while she cried. I’m still doing real estate—managing properties, fixing issues, talking people down from fights over parking stalls. All while trying to keep my grades up and my head above water. This isn’t character-building. It’s survival. I didn’t choose these jobs because they were fun—I chose them because someone had to. And because I knew I could handle it.</p>
       </div>
       <div class="info-box">
         <h3>Travel</h3>
-        <p>Mexico and more — helped shape my empathy in care work.</p>
+        <p>I’ve been to Mexico enough times to know that “visiting family” is not a vacation—it’s a reminder. The border doesn’t disappear just because you cross it. Every trip shaped how I see care, how I understand struggle, and how I learned to read people without them saying a word.</p>
       </div>
       <div class="info-box">
         <h3>Volunteer</h3>
-        <p>Healthcare help and student mentoring keep me grounded.</p>
+        <p>I don’t volunteer for the hours—I do it because no one helped me when I needed it. Whether it’s mentoring someone through healthcare basics or just showing up at events with no recognition, I’m used to being the reliable one. The calm one. The one who doesn’t get credit but still makes sure it runs smoothly.</p>
       </div>
       <div class="info-box">
         <h3>Services I’ve Provided</h3>
         <ul>
-          <li><strong>Mentoring:</strong> For real estate and healthcare peers.</li>
-          <li><strong>Tutoring:</strong> Academic support in my majors.</li>
-          <li><strong>Community:</strong> Events, facilities, and more.</li>
+          <li><strong>Mentoring:</strong> For students in healthcare, real estate, and “what the hell do I do with my life” territory.</li>
+          <li><strong>Tutoring:</strong> Because sometimes you don’t need a genius—you need someone who gets how hard it is to care.</li>
+          <li><strong>Community:</strong> I’ve helped with facilities, events, setup, cleanup—you name it. I’m not above any task. I’ve done more for free than some people do with a title.</li>
         </ul>
       </div>
     </div>
