--- a/personal-projects.html
+++ b/personal-projects.html
@@ -128,7 +128,7 @@ function toggleMenu() {
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     const faders = document.querySelectorAll('.fade-in-section');
-    const appearOptions = { threshold: 0.10);
+    const appearOptions = { threshold: 0.10 };
 
     const appearOnScroll = new IntersectionObserver(function (entries, observer) {
       entries.forEach(entry => {
